# wrinkles

./: .gitignore  .gitmodules  LICENSE  Makefile  PROJECTION_TERMS.md  PYTHON_STYLE_GUIDE.md  README.md  SERIALIZATION_SUMMARY.md  STYLE_GUIDE.md  VERSIONING.md  VERSIONING_TODO.md  ZIGVERSION.md  build.zig  build.zig.zon  c-port-status.md  notes.md  otio_to_ziggy.py  pyguitest.py  test_opentimelineio_c
.github/workflows/: ci.yml  docs.yml
curves/: linear.curve.json  linear.normalized.curve.json  linear_scurve_u.curve.json  other_test_curve.curve.json  reverse_identity.curve.json  s_from_test.curve.json  scurve.curve.json  scurve_extreme.curve.json  test_data.curve.json  upside_down_u.curve.json
docs/: abstract.md  source-files.md
docs/origin_story/: TemporallyFlattenedTimeline.md  algebraic_transforms.md  goals.md  setup.md  time_hierarchy_design_notes.md  topology_origin.md
docs/papers_to_reference/: web_refs.md
docs/zig_notes/: zig_lldb.md  zig_notes.md
experiments/comath_test/: build.zig  build.zig.zon  comath_test.zig
libs/: update_modules.py  wrapped_kissfft.zig
libs/cimgui/: build.zig
libs/cimgui/src/: gui.zig  zgui.cpp
libs/sokol_wrapper/: c.zig  gui.zig  main.zig  root.zig  sokol_imgui.c  sokol_imgui.h
libs/sokol_wrapper/zgui/: gui.zig
libs/wrapped_libsamplerate/: wrapped_libsamplerate.c  wrapped_libsamplerate.zig
libs/zgpu/src/: zgpu.zig
libs/zgui/src/: gui.zig  plot.zig  zgui.cpp
libs/zig-wav/: .gitignore  README.md  build.zig  build.zig.zon
libs/zig-wav/.github/workflows/: build.yml
libs/zig-wav/src/: sample.zig  wav.zig
old/: domain.zig  mutable_topology.zig  test.zig  time_topology.zig
segments/: double.json  half.json  linear.json  reverse.json  scurve.json  scurve_extreme.json  upside_down_u.json
spline-gym/: CMakeLists.txt  README.md
spline-gym/src/: hodographs.c  hodographs.h  hodographs.zig  main.cpp  raygui.h
src/: README.md  allocator.zig  blank_fs.wgsl  convert_files.py  curvet.zig  curvevist.zig  example_zgui_app.zig  fft_test.zig  opentime.c  opentime.h  opentimelineio.zig  opentimelineio_c.h  opentimelineio_c.zig  opentimelineio_highlevel_test.zig  opentimelineio_json.zig  otio_dump_graph.zig  otio_dump_json.zig  otio_dump_ziggy.zig  otio_leak_test.zig  otio_measure_timeline.zig  otio_space_visualizer.zig  otvis.zig  path_hash.zig  planetary.zig  sampling.zig  serializer.zig  sokol_app_wrapper.zig  sokol_test.zig  string_stuff.zig  test_hodograph.zig  test_opentimelineio_c.c  timecodes.zig  topology_path_code.zig  transformation_visualizer.zig  treecode.c  treecode.zig  wrinkles.zig  wrinkles_common.wgsl  wrinkles_fs.wgsl  wrinkles_visual_debugger.zig
src-c/: CMakeLists.txt
src-c/curve/: CMakeLists.txt  README.md  bezier_curve.h  bezier_math.h  control_point.h  curve_lib.h  epsilon.h  linear_curve.h
src-c/curve/tests/: test_bezier_curve.c  test_bezier_math.c  test_control_point.c  test_linear_curve.c
src-c/hodographs/: CMakeLists.txt  hodographs.c  hodographs.h
src-c/opentime/: CMakeLists.txt  README.md  dbg_print.h  dual.h  interval.h  lerp.h  opentime.h  ordinate.h  projection_result.h  transform.h  util.h
src-c/opentime/tests/: test_harness.h  test_interval.c  test_ordinate.c  test_transform.c
src-c/treecode/: CMakeLists.txt  README.md  binary_tree.h  treecode.h  treecode_lib.h
src-c/treecode/tests/: test_binary_tree.c  test_treecode.c
src/c_binding/: Makefile  opentimelineio_c.h  opentimelineio_c.zig  test_opentimelineio_c.c
src/curve/: bezier_curve.zig  bezier_math.zig  control_point.zig  curve.zig  epsilon.zig  generic_curve.zig  linear_curve.zig  root.zig  test_segment_projection.zig
src/docs/: root.zig
src/old/: opentime.h
src/opentime/: allocator.zig  comath_test.zig  comath_wrapper.zig  dbg_print.zig  domain.zig  dual.zig  interval.zig  lerp.zig  opentime.zig  ordinate.zig  projection_result.zig  rational_time.zig  root.zig  sample.zig  string_stuff.zig  test.zig  test_2d.zig  test_segment_projection.zig  test_topology_projections.zig  time_algebra.zig  time_topology.zig  time_topology2.zig  transform.zig  util.zig
src/opentime/curve/: bezier_curve.zig  bezier_math.zig  control_point.zig  curve.zig  generic_curve.zig  linear_curve.zig
src/opentimelineio/: core.zig  domain.zig  opentimelineio_highlevel_test.zig  opentimelineio_json.zig  projection.zig  projection_builder.zig  references.zig  root.zig  schema.zig  serialization.zig  temporal_hierarchy.zig  temporal_tree.zig  test_structures.zig  topological_map.zig  versioning.zig  versioning_demo.zig
src/time_topology/: mapping.zig  mapping_affine.zig  mapping_curve_bezier.zig  mapping_curve_linear.zig  mapping_empty.zig  serialization.zig  test_topology_projections.zig  time_topology.zig  topology.zig
src/topology/: mapping.zig  mapping_affine.zig  mapping_curve_bezier.zig  mapping_curve_linear.zig  mapping_empty.zig  root.zig  serialization.zig  test_topology_projections.zig  topology.zig
src/treecode/: binary_tree.zig  graph.zig  map.zig  root.zig  treecode.zig
test_files/: just_clip.otio  just_track.otio  just_transition.otio  just_warp.otio  just_warp_bez.otio  just_warp_linear.otio  single_discrete_clip.otio  track_warp.otio  track_warp_bez.otio  warp.otio  warp_on_warp.otio
test_files_wrinkles/: . good_dino.updated.otio.ziggy  just_transition.otio.ziggy  just_warp.otio.ziggy  just_warp_linear.otio.ziggy  simple_cut.otio.ziggy  track_warp.otio.ziggy  track_warp_bez.otio.ziggy  warp.otio.ziggy  warp_on_warp.otio.ziggy
test_files_ziggy/: just_clip.ziggy  just_track.ziggy  just_transition.ziggy  just_warp_linear.ziggy  simple_cut.ziggy  single_discrete_clip.ziggy  track_warp.ziggy  track_warp_bez.ziggy  warp.ziggy  warp_on_warp.ziggy
wrinkles-book/: Wrinkles_in_time.md
ziggy_test/: demo.ottla  ottla.ziggy-schema  test.ziggy-schema  wrinkles.ziggy-schema
